# LightLLM

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.qwen35.ep  Dockerfile.qwen35.ep.update  LightMem  MAMBA_CACHE_USAGE.md  README.md  awq_trans.py  build_and_upload_docker.sh  conftest.py  format.py  generate_requirements_musa.sh  launch.sh  lightllm.sh  ops.py  prepare_dataset.py  pyproject.toml  requirements-amd.txt  requirements.txt  requirements_metax.txt  setup.py  start_bench_qw35_27b.sh  start_bench_qw35_27b_m35.sh  start_glm52_cpu_cache.sh  startup_dp_ep_cpu.sh  static_test.sh  test.py  test.sh  test_AWQ.sh  test_enc.sh  test_gsmk.py  test_r3.py  todo.txt  vllm.sh  vninja_bundle.tgz
.github/workflows/: docker-publish.yml
benchmark_results/glm52-static-matrix-4n/: decode_cap19_ctx16384-32768_n4_btok4096_mf0p8.json  decode_cap19_ctx16384-32768_n4_btok4096_mf0p8.manifest.json  decode_cap1_ctx16384-32768-65536-131072-204800-256000_n4_btok4096_mf0p8.json  decode_cap1_ctx16384-32768-65536-131072-204800-256000_n4_btok4096_mf0p8.manifest.json  decode_cap2_ctx16384-32768-65536_n4_btok4096_mf0p8.json  decode_cap2_ctx16384-32768-65536_n4_btok4096_mf0p8.manifest.json  (+12 more)
benchmark_results/glm52-static-matrix-4n-mtp/: cost_analysis.md  decode_cap19_ctx16384-32768-65536-131072-204800-256000_n4_btok4096_mf0p76_mtp.manifest.json  decode_cap19_ctx16384-32768-65536-131072-204800-256000_n4_btok4096_mf0p78_mtp.manifest.json  decode_cap19_ctx16384_n4_btok4096_mf0p76_mtp.json  decode_cap19_ctx16384_n4_btok4096_mf0p76_mtp.manifest.json  decode_cap19_ctx16384_n4_btok4096_mf0p77_mtp.manifest.json  decode_cap19_ctx16384_n4_btok4096_mf0p78_mtp.manifest.json  decode_cap2_ctx131072-204800-256000_n4_btok2048_mf0p76_mtp.json  decode_cap2_ctx131072-204800-256000_n4_btok2048_mf0p76_mtp.manifest.json  decode_cap6_ctx16384-32768_n4_btok4096_mf0p76_mtp.json  decode_cap6_ctx16384-32768_n4_btok4096_mf0p76_mtp.manifest.json  decode_cap7_ctx16384-32768_n4_btok4096_mf0p76_mtp.json  decode_cap7_ctx16384-32768_n4_btok4096_mf0p76_mtp.manifest.json  decode_cap8_ctx32768-65536-131072-204800-256000_n4_btok4096_mf0p76_mtp.manifest.json  decode_cap8_ctx32768-65536-131072_n4_btok4096_mf0p76_mtp.manifest.json  decode_cap8_ctx32768-65536_n4_btok4096_mf0p76_mtp.json  decode_cap8_ctx32768-65536_n4_btok4096_mf0p76_mtp.manifest.json  prefill_ctx131072-204800-256000_hit0p0-0p5-0p7-0p8-0p9_n4_btok2048_mf0p76_mtp_chunk2048_overlap.manifest.json  prefill_ctx131072-204800-256000_hit0p0-0p5-0p7-0p8-0p9_n4_btok4096_mf0p76_mtp_chunk2048_overlap.json  prefill_ctx131072-204800-256000_hit0p0-0p5-0p7-0p8-0p9_n4_btok4096_mf0p76_mtp_chunk2048_overlap.manifest.json  prefill_ctx16384-32768-65536-131072-204800-256000_hit0p0-0p5-0p7-0p8-0p9_n4_btok4096_mf0p78_mtp_chunk2048_overlap.manifest.json  prefill_ctx16384-32768-65536-131072-204800-256000_hit0p0-0p5-0p7-0p8-0p9_n4_btok4096_mf0p8_mtp_chunk2048_overlap.manifest.failed-dispatch-cap200.json  prefill_ctx16384-32768-65536-131072-204800-256000_hit0p0-0p5-0p7-0p8-0p9_n4_btok4096_mf0p8_mtp_chunk2048_overlap.manifest.json  prefill_ctx16384_hit0p0_n4_btok4096_mf0p78_mtp_chunk2048_overlap.json  prefill_ctx16384_hit0p0_n4_btok4096_mf0p78_mtp_chunk2048_overlap.manifest.failed-deepep.json  prefill_ctx16384_hit0p0_n4_btok4096_mf0p78_mtp_chunk2048_overlap.manifest.json  prefill_ctx16384_hit0p0_n4_btok4096_mf0p8_mtp_chunk2048_overlap.manifest.failed-deepep.json  prefill_ctx16384_hit0p5-0p7-0p8-0p9_n4_btok4096_mf0p78_mtp_chunk2048_overlap.json  prefill_ctx16384_hit0p5-0p7-0p8-0p9_n4_btok4096_mf0p78_mtp_chunk2048_overlap.manifest.json  prefill_ctx32768-65536-131072-204800-256000_hit0p0_n4_btok4096_mf0p78_mtp_chunk2048_overlap.manifest.json  prefill_ctx32768_hit0p0_n4_btok4096_mf0p78_mtp_chunk2048_overlap.json  prefill_ctx32768_hit0p0_n4_btok4096_mf0p78_mtp_chunk2048_overlap.manifest.json  prefill_ctx32768_hit0p5-0p7-0p8-0p9_n4_btok4096_mf0p78_mtp_chunk2048_overlap.json  prefill_ctx32768_hit0p5-0p7-0p8-0p9_n4_btok4096_mf0p78_mtp_chunk2048_overlap.manifest.json  prefill_ctx65536_hit0p0-0p5-0p7-0p8-0p9_n4_btok4096_mf0p76_mtp_chunk2048_overlap.json  prefill_ctx65536_hit0p0-0p5-0p7-0p8-0p9_n4_btok4096_mf0p76_mtp_chunk2048_overlap.manifest.json  prefill_ctx65536_hit0p0-0p5-0p7-0p8-0p9_n4_btok4096_mf0p78_mtp_chunk2048_overlap.manifest.json  tables.md
dataset/: random_synth_low_accept_1k.json  random_synth_low_accept_1k.json.meta.json  random_synth_low_accept_1k.json.probe.json
docker/: Dockerfile  Dockerfile.deepep  Dockerfile.metax  Dockerfile.nixl.deepep
docs/: WEIGHT_VERIFICATION.md  deepseek32_implementation.md  deepseek32_prefix_cache_fix.md  llm_reasoning_survey_2025-2026.md  r3_routing_capture.md
examples/: weight_verification_example.py
kvcache/: README.md  build.sh
lightllm/: __init__.py
scripts/: run_e2e_r3_test.sh
test/: check_oom.py  test_envs_framework.py  test_prefix_cache_fix.py  test_tokenizer_blocking.py
tools/: quick_launch_docker.py
vninja_diag_snapshot_20260513_182728/: config.yaml  profiles.yaml  verge.yaml
(+1675 files in other folders)
